--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ runtime.nefertem.image=${RUNTIME_DBT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-cor
 # OpenAPI/api-docs endpoint custom path
 springdoc.api-docs.path=/v1/api-docs
 #Logging
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=DEBUG
