Update K8s job Builder helper for V1EnvFrom

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,9 @@ application.endpoint=${DH_ENDPOINT:http://localhost:8080}
 kubernetes.namespace=${K8S_NAMESPACE:default}
 runtime.dbt.image=${RUNTIME_DBT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-dbt:latest}
 runtime.nefertem.image=${RUNTIME_NEFERTEM_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-nefertem:latest}
+# Config Map & Config Secret
+kubernates.config.secret=${DH_CONFIG_COMMON_SECRETS:}
+kubernetes.config.config-map=${DH_CONFIG_COMMON_MAPS: digitalhub-common-env}
 # OpenAPI/api-docs endpoint custom path
 springdoc.api-docs.path=/v1/api-docs
 #Logging
