--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ mlrun.api.project-url=http://192.168.49.2:30070/api/v1/projects/{project}
 mlrun.api.run-url=http://192.168.49.2:30070/api/v1/run/{project}/{uid}
 mlrun.api.log-url=http://192.168.49.2:30060/mlrun/api/v1/log/{project}/{uid}
 # Local envs
-application.endpoint=${DH_ENDPOINT:http://localhost:8080}
+application.endpoint=${DIGITALHUB_CORE_ENDPOINT:http://localhost:8080}
 kubernetes.namespace=${K8S_NAMESPACE:default}
 runtime.dbt.image=${RUNTIME_DBT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-dbt:latest}
 runtime.nefertem.image=${RUNTIME_NEFERTEM_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-nefertem:latest}
