--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ mlrun.api.log-url=http://192.168.49.2:30060/mlrun/api/v1/log/{project}/{uid}
 # Local envs
 application.endpoint=${DH_ENDPOINT:http://localhost:8080}
 kubernetes.namespace=${K8S_NAMESPACE:default}
+# Images
 runtime.dbt.image=${RUNTIME_DBT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-dbt:latest}
 runtime.nefertem.image=${RUNTIME_NEFERTEM_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-wrapper-nefertem:latest}
 # Config Map & Config Secret
