--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,10 @@ kubernates.config.secret=${DH_CONFIG_COMMON_SECRETS:}
 kubernetes.config.config-map=${DH_CONFIG_COMMON_MAPS: digitalhub-common-env}
 # OpenAPI/api-docs endpoint custom path
 springdoc.api-docs.path=/v1/api-docs
+#Rabbit AMQP
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 #Logging
 #logging.level.org.springframework=DEBUG
