--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-stream</artifactId>
+            <version>4.1.0</version>
         </dependency>
         <!-- For RabbitMQ -->
         <dependency>
