Add Event save listener to all entities

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,11 +63,13 @@ application:
 
 
 # Conditional Configuration Cloud
-cloud-stream:
+event-queue:
   enabled: true
   services:
     rabbit:
       enabled: true
+
+
 
 
 # OLD SPRING CLOUD CONFIG
