Add Wrapper class to entity. This info is necessary to get the entity type on the message sent on the rabbit queue

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,6 +67,15 @@ event-queue:
   enabled: true
   services:
     rabbit:
+      connection:
+        host: 192.168.49.1
+        port: 5672
+        username: guest
+        password: guest
+        virtual-host: /
+      queue-name: dhCoreQueue
+      entity-topic: entityTopic
+      entity-routing-key: entityRoutingKey
       enabled: true
 
 
