--- a/modules/commons/pom.xml
+++ b/modules/commons/pom.xml
@@ -14,6 +14,9 @@
     <name>commons</name>
     <description>DHCore commons</description>
 
+    <properties>
+        <jsonschema.version>4.33.1</jsonschema.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -70,28 +73,23 @@
         <dependency>
             <groupId>com.github.victools</groupId>
             <artifactId>jsonschema-generator</artifactId>
-            <version>4.33.1</version>
+            <version>${jsonschema.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.github.victools</groupId>
             <artifactId>jsonschema-module-jakarta-validation</artifactId>
-            <version>4.33.1</version>
+            <version>${jsonschema.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.victools</groupId>
             <artifactId>jsonschema-module-jackson</artifactId>
-            <version>4.33.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.victools</groupId>
-            <artifactId>jsonschema-module-jakarta-validation</artifactId>
-            <version>4.33.1</version>
+            <version>${jsonschema.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.victools</groupId>
             <artifactId>jsonschema-module-swagger-2</artifactId>
-            <version>4.33.1</version>
+            <version>${jsonschema.version}</version>
         </dependency>
     </dependencies>
 
