--- a/application/pom.xml
+++ b/application/pom.xml
@@ -14,6 +14,7 @@
     <name>core</name>
     <description>Digital Hub Core</description>
     <properties>
+        <spring-security.version>6.2.0</spring-security.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <springdoc.version>2.2.0</springdoc.version>
         <postgresql.version>42.7.2</postgresql.version>
@@ -43,6 +44,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-resource-server</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+            <version>${spring-security.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
