--- a/Dockerfile-cache
+++ b/Dockerfile-cache
@@ -1,6 +1,7 @@
-FROM maven:3.8.2-eclipse-temurin-17 AS cache
-COPY application/src /tmp/src
-COPY application/pom.xml /tmp/pom.xml
+FROM maven:3-eclipse-temurin-21 AS cache
+COPY application /tmp/application
+COPY modules /tmp/modules
+COPY pom.xml /tmp/pom.xml
 WORKDIR /tmp
 RUN mvn package -DskipTests
 
