refactor: cleanup deps and k8s implementation - wip

--- a/modules/runtime-container/pom.xml
+++ b/modules/runtime-container/pom.xml
@@ -7,7 +7,7 @@
         <groupId>it.smartcommunitylabdhub</groupId>
         <artifactId>digitalhub-core</artifactId>
         <version>${revision}</version>
-        <relativePath>../../</relativePath> <!-- lookup parent from repository -->
+        <relativePath>../../</relativePath>
     </parent>
     <groupId>it.smartcommunitylabdhub</groupId>
     <artifactId>dh-runtime-container</artifactId>
@@ -29,12 +29,9 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>compile</scope>
             <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
