--- a/application/pom.xml
+++ b/application/pom.xml
@@ -3,20 +3,30 @@
     xmlns="http://maven.apache.org/POM/4.0.0"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
+    <!-- <parent>
         <groupId>it.smartcommunitylabdhub</groupId>
         <artifactId>digitalhub-core</artifactId>
         <version>${revision}</version>
-        <relativePath>../</relativePath> <!-- lookup parent from repository -->
+        <relativePath>../</relativePath>
+    </parent> -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.0</version>
+        <relativePath>../</relativePath>
     </parent>
     <groupId>it.smartcommunitylabdhub</groupId>
     <artifactId>core</artifactId>
     <name>core</name>
     <description>Digital Hub Core</description>
     <properties>
+        <revision>0.0.29</revision>
+        <java.version>21</java.version>
         <spring-security.version>6.2.0</spring-security.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <springdoc.version>2.2.0</springdoc.version>
+        <jackson.version>2.15.3</jackson.version>
+        <kubernetes.version>19.0.0</kubernetes.version>
         <postgresql.version>42.7.2</postgresql.version>
         <mysql.version>8.0.33</mysql.version>
     </properties>
@@ -158,33 +168,33 @@
             <version>${slf4j.version}</version> <!-- or the latest version -->
         </dependency>
 
-				<!-- Solr -->
-				<dependency>
-				  <groupId>org.apache.solr</groupId>
-				  <artifactId>solr-solrj</artifactId>
-				  <version>9.4.1</version>
-				</dependency>
-		    <dependency>
-		        <groupId>org.eclipse.jetty</groupId>
-		        <artifactId>jetty-util</artifactId>
-		        <version>10.0.19</version>
-		    </dependency>
-		    <dependency>
-		        <groupId>org.eclipse.jetty</groupId>
-		        <artifactId>jetty-client</artifactId>
-		        <version>10.0.19</version>
-		    </dependency>
-		    <dependency>
-		        <groupId>org.eclipse.jetty</groupId>
-		        <artifactId>jetty-io</artifactId>
-		        <version>10.0.19</version>
-		    </dependency>
-		    <dependency>
-		        <groupId>org.eclipse.jetty</groupId>
-		        <artifactId>jetty-http</artifactId>
-		        <version>10.0.19</version>
-		    </dependency>
-    				
+        <!-- Solr -->
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>9.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>10.0.19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>10.0.19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-io</artifactId>
+            <version>10.0.19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-http</artifactId>
+            <version>10.0.19</version>
+        </dependency>
+
         <!-- DH MODULES -->
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
