--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -72,6 +72,7 @@ application:
   endpoint: ${DH_ENDPOINT:http://localhost:8080}
   description: @project.description@
   version: @project.version@  
+  profiles: ${spring.profiles.active:default}
 
 
 security:
