chore: update openapi to fix group naming and info

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -70,6 +70,7 @@ kubernetes:
 # Application endpoint
 application:
   endpoint: ${DH_ENDPOINT:http://localhost:8080}
+  name: @project.name@
   description: @project.description@
   version: @project.version@  
   profiles: ${spring.profiles.active:default}
