--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>modules/runtime-dbt</module>
         <module>modules/runtime-nefertem</module>
         <module>modules/runtime-mlrun</module>
+        <module>modules/runtime-kfp</module>
         <module>application</module>
     </modules>
 
