Working on RunMonitor. Refactor Poller (one poller accept a workflow), each workflow can be executed in parallel and sequential (applied to the steps). Create @MonitorComponent annotation and 'serve, job, deployment' monitor

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!-- <parent>
         <groupId>it.smartcommunitylabdhub</groupId>
@@ -202,11 +202,11 @@
             <artifactId>dh-commons</artifactId>
             <version>${revision}</version>
         </dependency>
-        <!-- <dependency>
+        <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-fsm</artifactId>
             <version>${revision}</version>
-        </dependency> -->
+        </dependency>
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-framework-k8s</artifactId>
