--- a/application/pom.xml
+++ b/application/pom.xml
@@ -227,6 +227,11 @@
             <artifactId>dh-runtime-dbt</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-runtime-kfp</artifactId>
+            <version>${revision}</version>
+        </dependency>
     </dependencies>
 
     <build>
