Working on RunnerManager and Finite state machine. Try container run goes to Error state.

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -222,16 +222,16 @@
             <artifactId>dh-runtime-container</artifactId>
             <version>${revision}</version>
         </dependency>
-        <dependency>
-            <groupId>it.smartcommunitylabdhub</groupId>
-            <artifactId>dh-runtime-nefertem</artifactId>
-            <version>${revision}</version>
-        </dependency>
-        <dependency>
-            <groupId>it.smartcommunitylabdhub</groupId>
-            <artifactId>dh-runtime-dbt</artifactId>
-            <version>${revision}</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>it.smartcommunitylabdhub</groupId>-->
+        <!--            <artifactId>dh-runtime-nefertem</artifactId>-->
+        <!--            <version>${revision}</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>it.smartcommunitylabdhub</groupId>-->
+        <!--            <artifactId>dh-runtime-dbt</artifactId>-->
+        <!--            <version>${revision}</version>-->
+        <!--        </dependency>-->
     </dependencies>
 
     <build>
