--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <revision>0.0.29</revision>
         <java.version>21</java.version>
         <spring-boot.version>3.2.0</spring-boot.version>
+        <springdoc.version>2.2.0</springdoc.version>
         <jackson.version>2.15.3</jackson.version>
         <slf4j.version>2.0.9</slf4j.version>
         <kubernetes.version>19.0.0</kubernetes.version>
