fix: update base controllers to properly extract search filters + update schema generation

--- a/modules/commons/pom.xml
+++ b/modules/commons/pom.xml
@@ -41,7 +41,12 @@
             <version>${spring-boot.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-common</artifactId>
+            <version>${springdoc.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
