--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!-- <parent>
         <groupId>org.springframework.boot</groupId>
@@ -31,9 +31,9 @@
         <module>modules/fsm</module>
         <module>modules/framework-k8s</module>
         <module>modules/runtime-container</module>
-        <!--        <module>modules/runtime-dbt</module>-->
-        <!--        <module>modules/runtime-nefertem</module>-->
-        <!--        <module>modules/runtime-mlrun</module>-->
+        <module>modules/runtime-dbt</module>
+        <module>modules/runtime-nefertem</module>
+        <module>modules/runtime-mlrun</module>
         <module>application</module>
     </modules>
 
